--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,17 +5,19 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.example.quotes_app.application.QuoteApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.example.quotes_app.application.QuoteApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyRetrofitApplication"
         tools:targetApi="31">
-
+        <activity
+            android:name="com.example.employee_app.MemesApp.MemesAppActivity"
+            android:exported="false" />
         <activity
             android:name="com.example.quotes_app.QuotesActivity"
             android:exported="false" />
